# noteanchor

./: .gitignore  BETA_PAGE_DRAFT.md  DEMO_RECORDING_SCRIPT_0.4.1.md  DEMO_WEBPAGE_PLAN_0.4.1.md  IMPLEMENTATION_ORDER_0.4.1.md  LANDING_PAGE.md  PDF_GUARDED_EXPERIMENTAL_INTEGRATION_PLAN.md  PDF_NEXT_STEPS_0.5.0.md  PDF_NOTE_MODEL_0.5.0.md  PDF_PROTOTYPE_NOTES_0.4.1.md  PDF_TEXT_NOTES_SPIKE_PLAN.md  PRIORITIES_0.4.1.md  PRIORITIES_0.4.2.md  PRODUCT_POSITIONING.md  People Do Fall Downstairs1.notes.json  People Do Fall Downstairs1.txt  README.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  TESTER_MESSAGE_RU_0.4.0.md  TESTER_MESSAGE_RU_0.4.1.md  TESTER_MESSAGE_UK_0.4.0.md  TESTER_MESSAGE_UK_0.4.1.md  TESTER_SHORT_MESSAGE_RU_0.4.0.md  TESTER_SHORT_MESSAGE_RU_0.4.1.md  TESTER_SHORT_MESSAGE_UK_0.4.0.md  TESTER_SHORT_MESSAGE_UK_0.4.1.md  TEST_FEEDBACK_0.4.0.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  Запуск Notes Anchor.txt
pdf-controlled-spike/: PdfControlledSpike.tsx  README_PDF_CONTROLLED_SPIKE.md  pdf-controlled-spike.css
pdf-text-selection-spike/: PdfTextSelectionSpike.tsx  README_PDF_TEXT_SELECTION_SPIKE.md  pdf-text-selection-spike.css
pdf-textcontent-geometry-spike/: PdfTextContentGeometrySpike.tsx  README_PDF_TEXTCONTENT_GEOMETRY_SPIKE.md  pdf-textcontent-geometry-spike.css
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tester-demo-0.4.1/: README_TEST_SCENARIO_0.4.1.md  README_TEST_SCENARIO_RU_0.4.1.md  README_TEST_SCENARIO_UK_0.4.1.md  (+5 more)
(+4 files in other folders)
